--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
   cupertino_icons: ^1.0.2
+  lint: ^1.5.3
+  dartz: ^0.9.2
+  equatable: ^2.0.3
+  flutter_hooks: ^0.18.0
 
 dev_dependencies:
   flutter_test:
