--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dev_dependencies:
 
 flutter:
 
-  
   uses-material-design: true
+  
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -43,16 +43,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-
+  fonts:
+    - family: SF Mono
+      fonts:
+      - asset: fonts/SFMono-Regular.ttf
+    - family: SF Pro Text
+      fonts:
+      - asset: fonts/SF-Pro-Text-Regular.ttf
+    - family: SF Pro Display
+      fonts:
+      - asset: fonts/SFProDisplay.ttf
