--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,6 @@ description: A new Flutter project.
 
 publish_to: 'none' 
 
-
 version: 1.0.0+1
 
 environment:
@@ -17,6 +16,7 @@ dependencies:
   dartz: ^0.9.2
   equatable: ^2.0.3
   flutter_hooks: ^0.18.0
+  animated_splash_screen: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -25,31 +25,16 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  
+  assets:
+    - assets/images/
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: SF Mono
       fonts:
-      - asset: fonts/SFMono-Regular.ttf
+      - asset: assets/fonts/SFMono-Regular.ttf
     - family: SF Pro Text
       fonts:
-      - asset: fonts/SF-Pro-Text-Regular.ttf
+      - asset: assets/fonts/SF-Pro-Text-Regular.ttf
     - family: SF Pro Display
       fonts:
-      - asset: fonts/SFProDisplay.ttf
+      - asset: assets/fonts/SFProDisplay.ttf
