--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   lint: ^1.5.3
-  dartz: ^0.9.2
+  dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.3
   flutter_hooks: ^0.18.0
 
