--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  effective_dart: ^1.3.1
+  mockito: ^5.0.10
+  
 flutter:
 
   uses-material-design: true
