--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   equatable: ^2.0.3
   flutter_hooks: ^0.18.0
   animated_splash_screen: ^1.1.0
-
+  awesome_notifications: any 
 dev_dependencies:
   flutter_test:
     sdk: flutter
